--- a/index.html
+++ b/index.html
@@ -196,31 +196,32 @@
       100% { opacity: 1; }
     }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(20px) scale(0.95);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0) scale(1);
-  }
-}
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px) scale(0.95);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+      }
+    }
   </style>
 </head>
 <body>
   <canvas id="particles-bg"></canvas>
   <a href="mailto:contacttodelete@gmail.com" class="floating-contact">✉️ Contact Us</a>
-<!-- Also Visit Section -->
-<section class="video-section">
-  <h2 class="section-heading">Must Visit</h2><br>
-</section>
-<section class="grid" id="externalSites">
-  <div class="card">
-    <h3>🔥Desi MMS </h3>
-    <button onclick="window.open('https://videozone.example.com', '_blank')">Visit 🔗</button>
-  </div>
-</section>
+
+  <section class="video-section">
+    <h2 class="section-heading">Must Visit</h2><br>
+  </section>
+  <section class="grid" id="externalSites">
+    <div class="card">
+      <h3>🔥Desi MMS </h3>
+      <button onclick="window.open('https://videozone.example.com', '_blank')">Visit 🔗</button>
+    </div>
+  </section>
+
   <div class="video-section">
     <h2 class="section-heading"> All Videos</h2><br><br>
   </div>
@@ -237,7 +238,7 @@
   </footer>
 
   <script>
-    const sheetID = '1kHeowWViLuwlFtt9ow8YzrQI0E0oHT1w-yLkWhieti4';
+    const sheetID = '1f0JviNFYWWGsxkN58ksdqPgUZ3psgFd9lznrAtDFXNk';
     const sheetName = 'Sheet1';
     const query = encodeURIComponent('SELECT A, B, C');
     const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?sheet=${sheetName}&tq=${query}`;
@@ -316,10 +317,14 @@
         card.className = 'card fade-in';
         card.style.animationDelay = `${index * 100}ms`;
         card.setAttribute('data-post-id', post.id);
+
+        const cleanTitle = encodeURIComponent(post.title || 'Untitled');
+        const cleanUrl = encodeURIComponent(post.watchUrl || '#');
+
         card.innerHTML = `
           <img src="${post.imageUrl}" alt="${post.title}" oncontextmenu="return false;" draggable="false" loading="lazy" decoding="async"/>
           <h3>${emoji} ${post.title}</h3>
-          <button onclick="handleWatchClick('${encodeURIComponent(post.watchUrl)}', '${encodeURIComponent(post.title)}')">▶️ Watch</button>
+          <button onclick="handleWatchClick('${cleanUrl}', '${cleanTitle}')">▶️ Watch</button>
         `;
         grid.appendChild(card);
       });
@@ -352,6 +357,7 @@
       }
     }
 
+    // particle animation
     const canvas = document.getElementById('particles-bg');
     const ctx = canvas.getContext('2d');
     let particles = [];
