--- a/verify.html
+++ b/verify.html
@@ -102,6 +102,7 @@
 
     const accessKey = `verified_until`;
 
+    // ✅ Updated: Only localStorage check for verification
     const verifiedUntil = localStorage.getItem(accessKey);
     if (verifiedUntil && Date.now() < Number(verifiedUntil)) {
       window.location.href = `https://pogolinkz.netlify.app/access-granted.html?url=${encodeURIComponent(url)}&title=${encodeURIComponent(title || "")}`;
@@ -195,6 +196,6 @@
 
     initParticles();
     animateParticles();
-  </script>
+</script>
 </body>
 </html>
