--- a/verify.html
+++ b/verify.html
@@ -76,31 +76,6 @@
     }
   </style>
 </head>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyD0ToOiOy0rxygIiJbulFA1JMqwiGGHBdQ",
-    authDomain: "pogoverification.firebaseapp.com",
-    databaseURL: "https://pogoverification-default-rtdb.firebaseio.com",
-    projectId: "pogoverification",
-    storageBucket: "pogoverification.firebasestorage.app",
-    messagingSenderId: "809965158927",
-    appId: "1:809965158927:web:677ba69861acc49be1d97a"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.database();
-
-  async function getUserIdentifier() {
-    const fp = await FingerprintJS.load();
-    const result = await fp.get();
-    const fingerprint = result.visitorId;
-    const ipRes = await fetch("https://api.ipify.org?format=json");
-    const ipData = await ipRes.json();
-    return `${ipData.ip}_${fingerprint}`;
-  }
-</script>
 <body>
   <canvas id="particles-bg"></canvas>
 
@@ -127,7 +102,6 @@
 
     const accessKey = `verified_until`;
 
-    // ✅ Updated: Only localStorage check for verification
     const verifiedUntil = localStorage.getItem(accessKey);
     if (verifiedUntil && Date.now() < Number(verifiedUntil)) {
       window.location.href = `https://pogolinkz.netlify.app/access-granted.html?url=${encodeURIComponent(url)}&title=${encodeURIComponent(title || "")}`;
@@ -140,8 +114,8 @@
       }
 
       const finalRedirect = `https://pogolinkz.netlify.app/access-granted.html?url=${encodeURIComponent(url)}&title=${encodeURIComponent(title || "")}`;
-      const apiToken = 'b253865141e0363f5899f0a69e74772db28f0558';
-      const shortUrlApi = `https://linkshortify.com/api?api=${apiToken}&url=${encodeURIComponent(finalRedirect)}`;
+      const apiToken = 'pVSmmVpEFtTLjLc2jshXFqOGNzc2';
+      const shortUrlApi = `https://shareus.io/api?api=${apiToken}&url=${encodeURIComponent(finalRedirect)}`;
 
       const btn = document.querySelector('.verify-btn');
       btn.disabled = true;
@@ -156,13 +130,6 @@
           btn.disabled = false;
           btn.textContent = "Click Here To Verify Task";
         } else {
-          const expiresAt = Date.now() + 24 * 60 * 60 * 1000;
-getUserIdentifier().then(uid => {
-  db.ref("verifiedUsers/" + uid).set({
-    verified: true,
-    expiresAt: expiresAt
-  });
-});
           window.location.href = result.shortenedUrl;
         }
       } catch (error) {
@@ -228,6 +195,6 @@ getUserIdentifier().then(uid => {
 
     initParticles();
     animateParticles();
-</script>
+  </script>
 </body>
 </html>
