--- a/stream.html
+++ b/stream.html
@@ -180,31 +180,6 @@
       background: linear-gradient(to right, #ff8c42, #ffa87d);
     }
   </style>
-  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyD0ToOiOy0rxygIiJbulFA1JMqwiGGHBdQ",
-    authDomain: "pogoverification.firebaseapp.com",
-    databaseURL: "https://pogoverification-default-rtdb.firebaseio.com",
-    projectId: "pogoverification",
-    storageBucket: "pogoverification.firebasestorage.app",
-    messagingSenderId: "809965158927",
-    appId: "1:809965158927:web:677ba69861acc49be1d97a"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.database();
-
-  async function getUserIdentifier() {
-    const fp = await FingerprintJS.load();
-    const result = await fp.get();
-    const fingerprint = result.visitorId;
-    const ipRes = await fetch("https://api.ipify.org?format=json");
-    const ipData = await ipRes.json();
-    return `${ipData.ip}_${fingerprint}`;
-  }
-</script>
 </head>
 <body>
 <canvas id="particles-bg"></canvas>
@@ -232,22 +207,12 @@
   const streamUrl = urlParams.get('url');
   const title = urlParams.get('title') || "Streaming...";
 
-  // ✅ Updated: Only localStorage check for verification
   function isVerified() {
+    const verifiedCookie = document.cookie.includes("verified_access=true");
     const verifiedUntil = parseInt(localStorage.getItem('verifiedUntil') || '0', 10);
-    return verifiedUntil > Date.now();
+    return verifiedCookie && verifiedUntil > Date.now();
   }
-getUserIdentifier().then(uid => {
-  db.ref("verifiedUsers/" + uid).once("value", snap => {
-    if (snap.exists()) {
-      const data = snap.val();
-      if (data.verified && data.expiresAt > Date.now()) {
-        document.cookie = "verified_access=true; path=/";
-        localStorage.setItem('verifiedUntil', data.expiresAt);
-      }
-    }
-  });
-});
+
   const streamCard = document.getElementById("streamCard");
   const verificationLock = document.getElementById("verificationLock");
 
@@ -275,6 +240,7 @@ getUserIdentifier().then(uid => {
       document.getElementById('videoContainer').style.display = 'block';
     };
 
+    // ✅ NEW: Fallback for blocked embeds
     iframe.onerror = () => {
       alert("This video cannot be embedded. Opening in a new tab...");
       window.open(streamUrl, '_blank');
@@ -283,8 +249,8 @@ getUserIdentifier().then(uid => {
 
   function startVerification() {
     const currentUrl = encodeURIComponent(window.location.href);
-    const apiToken = 'b253865141e0363f5899f0a69e74772db28f0558';
-    const apiUrl = `https://linkshortify.com/api?api=${apiToken}&url=${currentUrl}`;
+    const apiToken = 'pVSmmVpEFtTLjLc2jshXFqOGNzc2';
+    const apiUrl = `https://shareus.io/api?api=${apiToken}&url=${currentUrl}`;
 
     fetch(apiUrl)
       .then(res => res.json())
